<resources>
    <string name="app_name">DeSal</string>
    <string name="fragment_login_title">Effettua l\'accesso</string>
    <string name="fragment_signup_title">Crea un nuovo utente</string>
    <string name="btn_signup_confirm">Conferma</string>
    <string name="fragment_signup_username_hint">Nome utente</string>
    <string name="fragment_signup_password_hint">Password</string>
    <string name="fragment_signup_password_disclaimer">Scegli una password sicura tra 5 e 72 caratteri. Puoi usare lettere maiuscole e minuscole, numeri e i seguenti caratteri: ,.-;:_!=?^*+</string>
    <string name="fragment_signup_username_disclaimer">Crea un nome utente di almeno 4 caratteri. Puoi usare lettere, numeri, punti e trattini.</string>
    <string name="cd_logo">DeSal logo</string>
    <string name="dialog_progress_loading">Attendi un attimo…</string>
    <string name="error_username_too_long">Nome utente troppo lungo.</string>
    <string name="error_username_too_short">Nome utente troppo corto.</string>
    <string name="error_username_bad_chars">Il nome utente contiene caratteri non consentiti.</string>
    <string name="error_password_too_short">Password troppo corta.</string>
    <string name="error_password_too_long">Password troppo lunga.</string>
    <string name="error_password_bad_chars">La password contiene caratteri non consentiti.</string>
    <string name="error_username_taken">Nome utente già in uso, cercane un altro!</string>
    <string name="error_new_password_same_as_old">La nuova e la vecchia password non posso coincidere.</string>
    <string name="error_wrong_credentials">Nome utente o password errati.</string>
    <string name="error_validation_invalid">Il codice di controllo non è valido. Correggilo o crea un nuovo utente.</string>
    <string name="error_validation_expired">Il codice di controllo è scaduto, crea un nuovo utente.</string>
    <string name="error_session_invalid">La sessione è scaduta o non è valida, prova a fare di nuovo il login.</string>
    <string name="error_wrong_user_type">Non hai i privilegi per compiere quest\'azione.</string>
    <string name="error_sid_invalid">La stazione richiesta non esiste.</string>
    <string name="error_oid_invalid">L\'articolo richiesto non esiste.</string>
    <string name="error_not_enough_items_available">Non ci sono abbastanza articoli per soddisfare la richiesta.</string>
    <string name="error_shift_active_sid">Questa stazione ha già un turno attivo.</string>
    <string name="error_shift_active_uid">Hai già iniziato un altro turno in precedenza.</string>
    <string name="error_shift_not_active">Nessun turno attivo presso questa stazione.</string>
    <string name="error_bad_request">Errore nella richiesta al server.</string>
    <string name="error_endpoint_not_found">Questo indirizzo internet non porta da nessuna parte.</string>
    <string name="error_generic">Ops, "c'è" stato un errore. Controlla la tua connessione e riprova.</string>
    <string name="signup_success">Utente creato con successo!</string>
    <string name="fragment_login_username_hint">Nome utente</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="btn_login_confirm">Accedi</string>
    <string name="fragment_employee_station_title">Stazione di servizio</string>
    <string name="bottom_employee_station">Stazione</string>
    <string name="bottom_employee_inventory">Negozio</string>
    <string name="bottom_employee_oil">Olio</string>
    <string name="bottom_employee_transactions">Transazioni</string>
    <string name="fragment_employee_inventory_title">Negozio</string>
    <string name="fragment_employee_oil_title">Olio</string>
    <string name="fragment_employee_transactions_title">Transazioni</string>
    <string name="activity_employee_title">DeSal</string>
    <string name="fragment_station_selection_title">Scegli una stazione</string>
    <string name="cd_station_icon">Icona stazione di servizio</string>
    <string name="cd_station_selected_icon">Icona del segno di spunta per indicare la stazione selezionata</string>
    <string name="blob_station_empty">\?</string>
    <string name="error_no_station_selected">Nessuna stazione di servizio selezionata</string>
    <string name="fragment_employee_station_prices">Prezzi</string>
    <string name="item_price_unit">€/L</string>
    <string name="patp">servito</string>
    <string name="self">self</string>
    <string name="item_price_gpl">GPL</string>
    <string name="item_price_diesel">Gasolio</string>
    <string name="item_price_unleaded">Super Senza Piombo</string>
    <string name="fragment_employee_station_shifts">Turni di lavoro</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="fragment_employee_station_no_shifts">Nessun turno di lavoro attivo.\n Usa il pulsante in basso per iniziare un nuovo turno.</string>
    <string name="activity_begin_or_end_shift_title">Inzia un nuovo turno</string>
    <string name="activity_begin_or_end_shift_confirm">Conferma</string>
    <string name="activity_begin_or_end_shift_initial_data">Valori iniziali</string>
    <string name="activity_begin_new_shift_gpl_clock">Orologio GPL %d</string>
    <string name="cd_gpl_clock_icon">Icona dell\'orologio del GPL</string>
    <string name="activity_begin_or_end_shift_fund">Cassa</string>
    <string name="item_pump_unit">L</string>
    <string name="cd_pump_icon">Icona della pompa di carburante</string>
    <string name="activity_begin_or_end_shift_pumps">Erogatori</string>
    <string name="item_pump_gpl">GPL</string>
    <string name="item_pump_diesel">Gasolio</string>
    <string name="item_pump_unleaded">SSP</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Annulla</string>
    <string name="dialog_pump_initial_value_input_field_hint">Valore iniziale</string>
    <string name="dialog_pump_end_value_input_field_hint">Valore finale</string>
    <string name="error_field_value_invalid">Inserisci un valore valido</string>
    <string name="error_not_all_pumps_have_values">Manca il valore di qualche erogatore.</string>
    <string name="toast_begin_new_shift_success">Hai creato un nuovo turno, ora è attivo!</string>
    <string name="error_not_all_fields_are_filled">Compila tutti i campi prima di confermare.</string>
    <string name="error_rid_invalid">Il turno di lavoro richiesto non esiste.</string>
    <string name="fragment_employee_station_shift_title">Turno attivo</string>
    <string name="fragment_employee_station_edit_shift">Puoi controllare e terminare il turno attivo con il pulsante in basso.</string>
    <string name="activity_shift_title">Sommario turno</string>
    <string name="activity_shift_active">Turno attivo</string>
    <string name="activity_shift_initial_data">Valori iniziali</string>
    <string name="activity_shift_gpl_clock">Orologio GPL %s</string>
    <string name="activity_shift_fund">Cassa</string>
    <string name="activity_shift_pumps">Erogatori</string>
    <string name="cd_fund_icon">Icona della cassa</string>
    <string name="activity_shift_summary">Transazioni</string>
    <string name="fragment_employee_inventory_items">Articoli disponibili</string>
    <string name="activity_sale_title">Vendita accessorio</string>
    <string name="fragment_employee_sale_accessory_title">Vendita accessorio</string>
    <string name="fragment_employee_sale_oil_title">Vendita olio</string>
    <string name="fragment_employee_sale_options">Altro</string>
    <string name="fragment_employee_sale_confirm">Vendi</string>
    <string name="cd_credit_card_icon">Icona della carta di credito</string>
    <string name="payment_method_credit_card">Carta bancaria</string>
    <string name="cd_selected_icon">Icona del segno di spunta</string>
    <string name="payment_method_cash">Contanti</string>
    <string name="cd_cash_icon">Icona dei contanti</string>
    <string name="cd_coupon_icon">Icona del buono di pagamento</string>
    <string name="payment_method_coupon">Buono interno</string>
    <string name="fragment_employee_sale_payment_method">Metodo di pagamento</string>
    <string name="cd_payment_method_icon">Icona del metodo di pagamento predefinito</string>
    <string name="fragment_employee_sale_quantity">Quantità</string>
    <string name="fragment_employee_sale_number_of">Numero di %s</string>
    <string name="fragment_employee_sale_total">Totale</string>
    <string name="unit_pieces">pezzi</string>
    <string name="unit_liters">litri</string>
    <string name="action_login">Accedi</string>
    <string name="popup_prices_copy">Copia</string>
    <string name="popup_prices_edit">Modifica</string>
    <string name="fragment_employee_station_price_copied">Prezzo copiato.</string>
    <string name="dialog_edit_price_field_hint">€/L</string>
    <string name="dialog_edit_price_field_format">0.000</string>
    <string name="dialog_edit_price_title">Modifica prezzo</string>
    <string name="comma">,</string>
    <string name="zero">0</string>
    <string name="dialog_edit_price_confirm">Conferma</string>
    <string name="dialog_edit_price_success">Prezzo modificato con successo.</string>
    <string name="fragment_employee_sale_success">Vendita registrata con successo.</string>
    <string name="dialog_useless_item_message">Questo articolo non è più disponibile. Rimuoverlo dall\'inventario?</string>
    <string name="fragment_employee_inventory_item_deletion_success">Articolo rimosso.</string>
    <string name="fragment_employee_inventory_no_items">L\'inventario di questa stazione è vuoto.</string>
    <string name="activity_owner_title">DeSal Titolare</string>
    <string name="bottom_owner_stations">Stazioni</string>
    <string name="bottom_owner_inventory">Inventario</string>
    <string name="bottom_owner_shifts">Turni</string>
    <string name="fragment_owner_stations">Tutte le stazioni</string>
    <string name="item_station_expanded_header">Stazione di</string>
    <string name="fragment_employee_station_prices_footer">Tocca i prezzi dei carburanti per copiarli o modificarli.</string>
    <string name="activity_station_selection_title">Scegli una stazione</string>
    <string name="toolbar_activity_station_selection_done">Fatto</string>
    <string name="cd_patp_icon">Icona del servito</string>
    <string name="fragment_owner_add_pump_fuels">Carburante</string>
    <string name="fragment_owner_add_pump_display">N.ro pompa</string>
    <string name="fragment_owner_add_pump_type">Tipo</string>
    <string name="cd_self_icon">Icona del self</string>
    <string name="fragment_owner_add_pump_display_hint">#</string>
    <string name="fragment_owner_add_pump_done">Aggiungi</string>
    <string name="activity_loading_no_stations">Nessuna stazione disponibile.</string>
    <string name="activity_loading_no_work_today">Non si lavora oggi?</string>
    <string name="activity_loading_retry">Riprova</string>
    <string name="dialog_fortech_total_input_title">Dati strisciata</string>
    <string name="dialog_fortech_total_input_litres_hint">Totale litri</string>
    <string name="dialog_fortech_total_input_profit_hint">Profitto in €</string>
    <string name="dialog_fortech_total_input_close">Annulla</string>
    <string name="dialog_fortech_total_input_confirm">Conferma</string>
    <string name="cd_fortech_total_litres_icon">Icona del totale Fortech in litri</string>
    <string name="cd_fortech_total_profit_icon">Icona del totale Fortech in euro</string>
    <string name="fragment_signup_full_name_hint">Nome completo</string>
    <string name="fragment_signup_full_name_disclaimer">Il tuo nome completo. Comparirà sui documenti generati alla fine di ogni turno che porti a termine. Per accedere invece uatilizzarai il nome utente.</string>
    <string name="fragment_signup_switch">Hai già un account?</string>
    <string name="activity_loading_logout">Esci</string>
    <string name="cd_logout">Icona del logout</string>
</resources>