<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:animateLayoutChanges="true">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo"
        android:contentDescription="@string/cd_logo"/>

    <ProgressBar
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:indeterminate="true"
        android:id="@+id/wheel"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:id="@+id/activity_loading_no_stations_container"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shrug"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@android:color/tertiary_text_light"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/activity_loading_no_stations"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="21.2sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/activity_loading_no_work_today"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="13.8sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:id="@+id/activity_loading_retry"
            android:padding="6dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="4dp"
            android:text="@string/activity_loading_retry"
            android:textSize="14.2sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:visibility="gone"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/activity_loading_logout_container">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_logout"
            android:padding="6dp"
            android:contentDescription="@string/cd_logout"
            app:tint="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:text="@string/activity_loading_logout"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14.2sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </LinearLayout>

</FrameLayout>