<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:title="@string/fragment_signup_title"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_signup_full_name"
                android:hint="@string/fragment_signup_full_name_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:text="@string/fragment_signup_full_name_disclaimer"
            android:textSize="12.0sp"
            android:textAlignment="textStart"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_signup_username"
                android:hint="@string/fragment_signup_username_hint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:text="@string/fragment_signup_username_disclaimer"
            android:textSize="12.0sp"
            android:textAlignment="textStart"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_signup_password"
                android:hint="@string/fragment_signup_password_hint"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:maxLength="72"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:text="@string/fragment_signup_password_disclaimer"
            android:textSize="12.0sp"
            android:textAlignment="textStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/fragment_signup_switch"
            android:text="@string/fragment_signup_switch"
            android:textColor="@color/colorAccentDark"
            android:textStyle="bold"
            android:textSize="13.8sp"
            android:textAllCaps="true"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:id="@+id/fragment_signup_snackbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:animateLayoutChanges="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:id="@+id/fragment_signup_confirm_container"
            android:background="@drawable/btn_accent_rounded">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:id="@+id/fragment_signup_loading_wheel"
                android:visibility="gone"
                style="@style/Widget.AppCompat.ProgressBar"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="12dp"
                android:id="@+id/fragment_signup_confirm"
                android:focusable="true"
                android:clickable="true"
                android:enabled="false"
                android:text="@string/btn_signup_confirm"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="14.8sp"
                android:textAlignment="center"/>

        </FrameLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>